--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="imgBx">
             <img : height ="200" width="250" border="1" src="my pic.png" >
         </div>
-        <h2>Abdullah nomani<br><span>web developer</span></h2>
+        <h2>Abdullah nomani<br><span></span></h2>
       </div>
       <div class="ContactInfo">
       <h3 class="title">Contact Info:</h3>
@@ -63,12 +63,12 @@
             <h4>Jinnah Foundation School</h4>
           </li>
           <li>
-            <h5>20219-2021</h5>
+            <h5>2019-2021</h5>
             <h4>intermadiate In Pre-Engineering</h4>
             <h4>Balochistan collage</h4>
         </li>
         <li>
-            <h5>2021-2022</h5>
+            <h5>2021 present</h5>
             <h4>BS Degree In CE(Undergraduate)</h4>
             <h4>Sir Syed University</h4>
         </li>
@@ -113,7 +113,7 @@
                 <h5>Hello International</h5>
          </div>
          <div class="text">
-            <h4>Senior Supervisor</h4>
+            <h4>SUPERVISIOR</h4>
             <p>Hello International strives to cater solutions that meet your needs.
                We deliver a fast rate customer experience by cooperating with our clients.
                We have strategized our services according to your needs</p>
@@ -163,7 +163,7 @@
         <h2 class="title2">Interest</h2>
        <ul>
         <li><i class="fa fa-gamepad" aria-hidden="true"></i> Online Gaming</li>
-        <li><i class="fa fa-futbol-o" aria-hidden="true"></i>  football</li>
+        <li><i class="fa fa-futbol-o" aria-hidden="true"></i> Badminton</li>
         <li><i class="fa fa-microphone" aria-hidden="true"></i>  Singing</li>
         <li><i class="fa fa-headphones" aria-hidden="true"></i>  listening</li>
         
